# brightway2-ui

./: .cruft.json  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: conda-package-deploy.yaml  python-package-deploy-bw25.yml  python-package-deploy.yml
bw2ui/: __init__.py
conda.recipe/: meta.yaml
conda.recipe-legacy/: meta.yaml
docs/: cli-commands.rst  conf.py  environment.yaml  index.md  index.rst  quickstart.rst  usage.md
docs/api/: bw2ui.bin.rst  bw2ui.rst  bw2ui.web.rst  modules.rst
docs/content/: commands.md  install.md  usage.md
docs/content/asciinema/: invoke.cast
tests/: __init__.py  conftest.py
